# nes-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: aliases.hpp  apu.hpp  audio.hpp  bus.hpp  cardridge.hpp  cartridge.hpp  colors.hpp  cpu.cpp  cpu.hpp  cpu6502.hpp  debug_view.hpp  debugger.hpp  instruction_info.hpp  main.cpp  mappers.hpp  math.hpp  nes.hpp  ppu.cpp  ppu.hpp  util.hpp  window.hpp
src/renderer/: fragment_shader.hpp  math.hpp  renderer.hpp  texture.hpp  vertex_shader.hpp
test/: test.cpp
